Prevent selected image flicker, add help menu

--- a/wasm_proxies/assets/print.css
+++ b/wasm_proxies/assets/print.css
@@ -1,5 +1,4 @@
 @page {
-    size: A4 portrait;
     margin: 5mm 10mm;
 }
 
